--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Community Lovers</h1>
-      <h2>Non-profit and independent network of fellow community organizers from all over the world!</h2>
-      <h2>Join our Slack space for discussions at <strong><a href="http://communitylovers.com/slack">communitylovers.com/slack</a></strong></h2>
+      <h2>Non-profit and independent network of fellow community builders from all over the world!</h2>
+      <h2>Check out our <strong><a href="https://github.com/communitylovers">GitHub homepage</a></strong> where you'll find links to all our chat spaces and open repositories.</h2>
     </div>
   </section><!-- End Hero -->
 
